<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?selectableItemBackground"
    android:padding="8dp">

    <TextView
        android:id="@+id/rankView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:transitionName="@string/transition_rank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:transitionName="@string/transition_image"
        app:layout_constraintStart_toEndOf="@id/rankView"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/symbolView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:transitionName="@string/transition_symbol"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BTC"/>

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:transitionName="@string/transition_name"
        app:layout_constraintStart_toStartOf="@id/symbolView"
        app:layout_constraintTop_toBottomOf="@id/symbolView"
        tools:text="Bitcoin"/>

    <ImageView
        android:id="@+id/chartView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/latest"/>

    <!--<TextView-->
    <!--android:id="@+id/price"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:gravity="end"-->
    <!--android:textSize="18sp"-->
    <!--tools:text="200$"/>-->

</android.support.constraint.ConstraintLayout>