<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:background="@color/colorPrimary"
      android:transitionName="@string/transition_name"
      app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
      app:titleTextColor="@color/white"
      tools:title="@string/app_name"/>

  <com.github.mikephil.charting.charts.LineChart
      android:id="@+id/lineChartView"
      android:layout_width="match_parent"
      android:layout_height="120dp"
      app:layout_constraintTop_toBottomOf="@id/toolbar"/>

  <TextView
      android:id="@+id/nameTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:textColor="@color/black"
      android:textSize="32sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/lineChartView"
      tools:text="Bitcoin"/>

  <TextView
      android:id="@+id/priceTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/black"
      android:textSize="24sp"
      app:layout_constraintStart_toStartOf="@id/nameTextView"
      app:layout_constraintTop_toBottomOf="@id/nameTextView"
      tools:text="230$"/>

  <TextView
      android:id="@+id/rankLabelView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/rank"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@id/priceTextView"
      app:layout_constraintTop_toBottomOf="@id/priceTextView"/>

  <TextView
      android:id="@+id/rankTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintStart_toEndOf="@id/rankLabelView"
      app:layout_constraintTop_toTopOf="@id/rankLabelView"
      tools:text="1"/>

  <!--<android.support.v7.widget.RecyclerView-->
  <!--android:id="@+id/recyclerView"-->
  <!--android:layout_width="match_parent"-->
  <!--android:layout_height="match_parent"-->
  <!--android:layout_marginTop="56dp"-->
  <!--app:layout_constraintBottom_toBottomOf="parent"-->
  <!--app:layout_constraintEnd_toEndOf="parent"-->
  <!--app:layout_constraintStart_toStartOf="parent"-->
  <!--app:layout_constraintTop_toBottomOf="@id/toolbar"/>-->
</android.support.constraint.ConstraintLayout>